--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,30 @@
-name: Deploy
-
+# name 可以自定义
+name: CI
+# 指定触发workflow的条件
+# 下面的意思就是在监听到main分支push操作的时候运行
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
+# jobs 表示要执行的一项或者多项任务
 jobs:
-  deploy:
+  # 任务名，可自定义
+  build-and-deploy:
+    # runs-on字段指定运行所需要的虚拟机环境。它是必填字段。目前可用的虚拟机如下。
     runs-on: ubuntu-latest
+    # steps表示执行步骤
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
+      # 检出代码，这里用了 actions/checkout@master 库来完成
+      - name: Checkout
+        uses: actions/checkout@master
+      # 这里展示了如何执行多条命令
+      - name: Install and Build
+        run: |
+          npm install
+          npm run build
+      # 这里引用了别人写好的发布库，具体参数信息可以查阅上面的链接
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
-          node-version: 16
-          cache: yarn
-      - run: yarn install --frozen-lockfile
-
-      - name: Build
-        run: yarn docs:build
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
+          branch: gh-pages
+          folder: dist
