--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "askgod",
+  "name": "pure-divination",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,7 +18,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "vite": "^4.4.0",
+    "vite": "^5.0.10",
     "vue-tsc": "^1.8.3"
   },
   "main": "index.js",
