--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
     "lunar-typescript": "^1.7.5",
+    "pnpm": "^9.6.0",
     "vue": "^3.4.34"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue": "^5.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "vite": "^5.3.5",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.0.29"
   },
   "main": "index.js",
   "keywords": [],
