--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@vitejs/plugin-vue": "^5.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "vite": "^5.4.3",
+    "vite": "5.4.8",
     "vue-tsc": "^2.1.6"
   },
   "main": "index.js",
